[INFER] Monitor CALLPROP calls whose callee is not statically known, bug 660204.